# agent-zero

./: .gitattributes  .gitignore  CHANGELOG-uv-python313.md  CLAUDE.md  DockerfileLocal  LANGCHAIN_MIGRATION.md  README.md  agent.py  biome.json  models.py  package.json  pyproject.toml  requirements-core.txt
.hypothesis/constants/: 0a635b45d4aa642a  1688e385596ec6d3  22fe998e6acdd53a  331ab913058818d5  36b3ed4362b66353  4ebb90995fff2f0d  56d1c8cc6252b2aa  59fe2930cfcf43d4  6f7cd2257fe2a7da  704a36e434600c1e  7379cc0c4a996862  79d196d43f1f1d0a  806ed109a9258d37  85ddb39a278e504e  8d22397a201ce209  9c2d015973448111  9fec3b7e6fa17a41  a2b9eb9cf29d33ed  a3817bcb9abb5915  a7abd5f782ad4d94  a9bbbaff3a4cb036  ab8e2677a2db6619  cdae13af92c71b7a  da39a3ee5e6b4b0d  db08ea9185e40397  dfda8a9083c0a6f8  e7fbe9f99e4b2982  edf4cfdcc31c67ed  ef61d4ac52873754  f81cca35fe8b1a41  f833a8c9909f771a
.hypothesis/examples/04e6b3400353b141/: 4b7d023e72d41684  54664070b86ad924  802bd6899a339b09  a2625ab3b83d3590  b58a00edd5bc8437  d7879bd067ad5b6b  e7ad31235e8ac06c
.hypothesis/examples/54664070b86ad924/: 0daacab061b38193  5445344f31f56e12
.hypothesis/examples/802bd6899a339b09/: 9024d0824aa0a514
.hypothesis/examples/a2625ab3b83d3590/: c8121e0c62e4688e
.hypothesis/examples/b58a00edd5bc8437/: 0361ff2b7292f292  646afb33186245a7
.hypothesis/examples/e7ad31235e8ac06c/: 0336c143973e91a4  03c1ce30ba60715b  0637bf511a2afaa0  0a93d365854ab359  0e742a0f96b4e1d5  10057ceee4bc8054  1487e85ae4535b82  1772558b5c2db9cc  198d55cef2cf65b7  1b410c0f65e3369d  1d5fcbce356e6806  1fb73ba6dcfecccb  1fe9db74604529df  2646af59a56749e2  270c14079213f6fd  2d7c9b618dc42a7e  2e928bce4db789b9  31e4dfaaee98a607  34a6fb24a9956ee7  34b1cd150d9251ed  3617de2326243248  3bc9126dfdad8f46  3c5e8eae7bbd32ed  3c6e9135bab33295  3e84518e2fad37bd  3eb1db6081b1ea43  42c19eb4cd020bf7  43555409208451ea  461bb97038b86050  4da961f4446df289  515faf31cd05d60c  518e2aae15f56b22  55ba4c5bfcc5df75  5854b80cf5f01a1e  5ddc916dcae8cb23  62883a84ad16d9bd  653488c8d7d4726b  6b10666b8e36f8d9  6f20f4074d42e663  6fa0b1072afa2e1d  (+49 more)
.serena/: project.yml
.serena/memories/: architecture.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conf/: model_providers.yaml
docker/base/fs/ins/: install_searxng2.sh
docker/run/: Dockerfile  docker-compose.yml  run-optimized.sh
docker/run/fs/etc/supervisor/conf.d/: supervisord.conf
docker/run/fs/exe/: run_tunnel_api.sh
docker/run/fs/ins/: install_A0.sh  install_A02.sh
docker/run/fs/per/root/: .bashrc
docs/: README.md  agent-zero-optimization-plan-2026.md  agent-zero-optimization-plan-v2.md  agent-zero-optimization-plan-v3.md  container-optimization.md  development.md  testing-strategy.md  tunnel.md
docs/archive/: UV_PYTHON313_REPORT.md
instruments/default/yt_download/: yt_download.sh
prompts/: agent.system.main.md  agent.system.mcp_installation.md  agent.system.tool.code_exe.md  fw.memory.hist_suc.sys.md  memory.solutions_sum.sys.md
python/api/: api_files_get.py  csrf_token.py  delete_work_dir_file.py  download_work_dir_file.py  file_info.py  get_work_dir_files.py  import_knowledge.py  memory_dashboard.py  message.py  scheduler_task_create.py  scheduler_task_update.py  upload.py  upload_work_dir_files.py
python/helpers/: api.py  attachment_manager.py  call_llm.py  dirty_json.py  docker.py  document_query.py  email_client.py  file_browser.py  files.py  history.py  job_loop.py  kokoro_tts.py  log.py  mcp_handler.py  memory.py  memory_consolidation.py  print_style.py  runtime.py  settings.py  task_scheduler.py  timed_input.py  tty_session.py  vector_db.py  whisper.py
python/tools/: browser_agent.py  code_execution_tool.py  vision_load.py
report/: LANGCHAIN_USAGE_ANALYSIS.md  LANGCHAIN_V1_BEST_PRACTICES_2025.md  RECOMMENDATIONS.md  langchain_migration_map.json  migrate_langchain.sh
tests/: email_parser_test.py  rate_limiter_test.py  strategies.py  test_agent.py  test_agent_properties.py  test_api.py  test_fasta2a_client.py  test_file_tree_visualize.py  test_helpers.py  test_models_properties.py
webui/components/notifications/: notification-store.js
webui/components/settings/memory/: memory-dashboard-store.js
webui/components/settings/tunnel/: tunnel-store.js
