[project]
name = "agent-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2wsgi==1.10.8",
    "ansio==0.0.1",
    "beautifulsoup4>=4.12.3",
    "browser-use==0.5.11",
    "crontab==1.0.1",
    "docker==7.1.0",
    "duckduckgo-search==6.1.12",
    "exchangelib>=5.4.3",
    "faiss-cpu==1.11.0",
    "fasta2a==0.5.0",
    "fastmcp==2.3.4",
    "flaredantic==0.1.4",
    "flask-basicauth==0.2.0",
    "flask[async]==3.0.3",
    "gitpython==3.1.43",
    "html2text>=2024.2.26",
    "imapclient>=3.0.1",
    "inputimeout==1.0.4",
    "kokoro>=0.9.4",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-unstructured>=1.0.1",
    "litellm>=1.75.3",
    "lxml-html-clean==0.3.1",
    "markdown==3.7",
    "markdownify==1.1.0",
    "mcp==1.13.1",
    "nest-asyncio==1.6.0",
    "newspaper3k==0.2.8",
    "onnxruntime>=1.23.2",
    "openai-whisper>=20250625",
    "paramiko==3.5.0",
    "pathspec>=0.12.1",
    "pdf2image==1.17.0",
    "playwright==1.52.0",
    "psutil>=7.0.0",
    "pydantic==2.11.7",
    "pymupdf==1.25.3",
    "pypdf==6.0.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.1.0",
    "pytz==2024.2",
    "sentence-transformers==3.0.1",
    "simpleeval==1.0.3",
    "soundfile==0.13.1",
    "tiktoken==0.8.0",
    "webcolors==24.6.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.48.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
