[project]
name = "agent-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2wsgi==1.10.8",
    "ansio==0.0.1",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.12.3",
    "browser-use==0.5.11",
    "crontab==1.0.1",
    "docker==7.1.0",
    "duckduckgo-search==6.1.12",
    "email-validator>=2.3.0",
    "exchangelib>=5.4.3",
    "faiss-cpu==1.11.0",
    "fasta2a==0.5.0",
    "fastapi>=0.128.0",
    "fastmcp==2.3.4",
    "flaredantic==0.1.4",
    "flask-basicauth==0.2.0",
    "flask[async]==3.0.3",
    "gitpython==3.1.43",
    "html2text>=2024.2.26",
    "imapclient>=3.0.1",
    "inputimeout==1.0.4",
    "kokoro>=0.9.4",
    "langchain>=1.2.6",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-unstructured>=1.0.1",
    "litellm>=1.75.3",
    "lxml-html-clean==0.3.1",
    "markdown==3.7",
    "markdownify==1.1.0",
    "mcp==1.13.1",
    "nest-asyncio==1.6.0",
    "newspaper3k==0.2.8",
    "onnxruntime>=1.23.2",
    "openai-whisper>=20250625",
    "paramiko==3.5.0",
    "pathspec>=0.12.1",
    "pdf2image==1.17.0",
    "playwright==1.52.0",
    "psutil>=7.0.0",
    "pydantic==2.11.7",
    "pymupdf==1.25.3",
    "pypdf==6.0.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.1.0",
    "pytz==2024.2",
    "sentence-transformers==3.0.1",
    "simpleeval==1.0.3",
    "soundfile==0.13.1",
    "tiktoken==0.8.0",
    "webcolors==24.6.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.48.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Ignore rules that conflict with project architecture
ignore = [
    # E402: Module level import not at top of file
    # Required for nest_asyncio.apply() which must run before other imports
    "E402",
    
    # F841: Local variable assigned but never used
    # Intentional in many places for debugging/future use
    "F841",
    
    # E701: Multiple statements on one line
    # Used intentionally in compact code patterns
    "E701",
]

# Per-file ignores for specific patterns
[tool.ruff.lint.per-file-ignores]
# Test files can have unused imports and variables
"tests/**/*.py" = ["F401", "F841"]
# Instruments are standalone scripts
"instruments/**/*.py" = ["E402", "F401"]

# =============================================================================
# Ty (Astral) Type Checker Configuration
# =============================================================================
[tool.ty]
# Ignore warnings from third-party libraries with incomplete type stubs

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Disable warnings that are mostly false positives from third-party libs
unused-ignore-comment = false  # Already cleaned up manually

# =============================================================================
# Pyrefly (Meta) Type Checker Configuration  
# =============================================================================
[tool.pyrefly]
python-version = "3.13"
# Exclude files with known third-party typing issues
project-excludes = [
    ".venv/**",
    "instruments/**",
    "tests/**",
]
# Ignore missing imports from third-party libraries
ignore-missing-source = true

# Disable error codes that are mostly false positives from external libraries
[tool.pyrefly.errors]
bad-argument-type = false     # litellm typing issues
not-callable = false          # litellm completion/acompletion  
bad-return = false            # embedding return types
missing-module-attribute = false  # dynamic imports
bad-assignment = false        # litellm suppress_debug_info
bad-typed-dict-key = false    # models.py tool_calls
bad-override = false          # prompts plugin overrides
unsupported-operation = false # Settings dict-like operations
missing-attribute = false     # browser-use and optional None checks
no-matching-overload = false  # litellm/openai complex overloads
not-iterable = false          # dynamic iteration patterns
missing-import = false        # pytest not in production deps
bad-function-definition = false  # generic default None patterns
bad-index = false             # dynamic dict access patterns
unbound-name = false          # exception variable in try/except
unreachable = false           # intentional early returns
